# stemjail

./: Cargo.toml  README.md
config/: example1.toml
config/profiles/: client-openbar.toml  client-paranoid.toml  company.toml  example1.toml  example2-t1.toml  example2.toml  perso-picz.toml  pro-bank.toml
src/: kage.rs  lib.rs  portal.rs  util.rs
src/cmd/: mod.rs  util.rs
src/cmd/info/: fsm_kage.rs  fsm_portal.rs  mod.rs
src/cmd/mount/: fsm_kage.rs  mod.rs
src/cmd/run/: fsm_kage.rs  fsm_portal.rs  mod.rs
src/cmd/shim/: fsm_kage.rs  fsm_monitor.rs  mod.rs
src/config/: error.rs  mod.rs  portal.rs  profile.rs
src/fdpass/: mod.rs
src/ffi/: fs.rs  mod.rs  net.rs  ns.rs
src/jail/: mod.rs  session.rs  util.rs
src/plugins/: mod.rs
src/plugins/run/: mod.rs
src/srv/: manager.rs  mod.rs
src/stemjail/: macros.rs  mod.rs
src/stemjail/cmd/: mod.rs
src/stemjail/cmd/mount/: fsm_kage.rs  mod.rs
src/stemjail/cmd/run/: fsm_kage.rs  fsm_portal.rs  mod.rs
src/stemjail/config/: error.rs  mod.rs  portal.rs  profile.rs
src/stemjail/fdpass/: mod.rs
src/stemjail/jail/: mod.rs  session.rs  util.rs
src/stemjail/srv/: mod.rs
tools/: bench.sh  create-chroot.sh  dot-custom.sh  env.sh  ffi-gen.py  kage.sh  portal.sh  xserver.sh
