[package]
name = "stemjail"
version = "0.3.0"
authors = ["Mickaël Salaün <mickael.salaun@ssi.gouv.fr>"]
description = "Dynamic user-activity isolation"
repository = "https://github.com/stemjail/stemjail"
readme = "README.md"
keywords = ["security", "linux", "ACL", "sandbox"]
license = "LGPL-3.0"
exclude = [".gitignore"]

[dependencies]
bincode = "*"
bitflags = "*"
bufstream = "*"
byteorder = "*"
env_logger = "*"
fd = "*"
getopts = "*"
log = "*"
mnt = "*"
rand = "*"
rustc-serialize = "*"
toml = "*"
tty = ">= 0.4.2"
unix_socket = "*"

[dependencies.stemflow]
path = "../stemflow"
version = ">= 0.5.1"
